[package]
name = "epqueue"
description = "Efficient priority queue written in Rust and compiled to WebAssembly"
authors = ["raulpy271 <raulrufino0@gmail.com>"]
repository = "https://github.com/raulpy271/epqueue"
license = "MIT"
version = "0.9.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.61"

